--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
 MONGODB_URL = 'mongodb+srv://shopG:shopG29@cluster0.xyazo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
 
 PORT = 5000
+
+ACCESS_TOKEN_SECRET = putin_huilo
+
+REFRESH_TOKEN_SECRET = russkiy_korabel_idi_na_hui
