--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,7 @@ PORT = 5000
 ACCESS_TOKEN_SECRET = putin_huilo
 
 REFRESH_TOKEN_SECRET = russkiy_korabel_idi_na_hui
+
+CLOUD_NAME = dy0g3gs2b
+CLOUD_API_KEY = 852443715962796
+CLOUD_API_SECRET = VBGNOZGOrtw75OVicctrtkwPtSM
